--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -155,7 +155,7 @@
                     
                     <p>
                       <i style="color: darkorange;">Question 5</i><br>
-                      Does this library need me to know programming ?
+                      Does this library need me to know programming ?<br>
                       <i style="color: forestgreen;">Response 5</i><br>
                       Yes, the library only cares about creating a context of gaming, parameters of the screen, double buffering and encapsulation of methods that let you draw things on the screen instead of the original methods not obvious.<br>
                       There is a code to help you use the engine with all its modules (Network, Pathfinding, Graphics, Mouse Events ...). I could add other stuff but my engine was created in the context of what my game need so far, (well I had stopped to continue my game because of less time I have and other personal stuff) but i still continue make it more advanced.<br>
@@ -165,7 +165,7 @@
                     
                     <p>
                       <i style="color: darkorange;">Question 6</i><br>
-                      What is the disadvantage of MELHARFI 2D Game Engine ?
+                      What is the disadvantage of MELHARFI 2D Game Engine ?<br>
                       <i style="color: forestgreen;">Response 6</i><br>
                       No special effect in animation like particle animation unless you add another library. No rotation of image unless you create many instances of images in different situation and use it like animation by showing them one by one (purpose of Anim class).<br>
                       It work only in windows form, no cross-platform "Linux / Mac".<br>
