--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -184,81 +184,30 @@
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
                 <p>Description</p>
-                <div class="progress">
-                  
-                </div>
-                <p>UI Design</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 60%;">
-                    ~60%
-                  </div>
-                </div>
-                <p>Php</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 20%;">
-                    ~20%
-                  </div>
-                </div>
-                <p>Javascript</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 10%;">
-                    ~10%
-                  </div>
-                </div>
-                <p>HTML</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 10%;">
-                    ~10%
-                  </div>
-                </div>
-                <p>CSS</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 20%;">
-                    ~20%
-                  </div>
-                </div>
-                <p>Sql</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 10%;">
-                    ~10%
-                  </div>
-                </div>
-                <p>Photoshop</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
-                  </div>
-                </div>
-                <p>Web developping</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
-                  </div>
-                </div>
-                <p>Reverse Engeenering Knownledge</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
-                  </div>
-                </div>
-                <p>C/C++</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 20%;">
-                    ~20%
-                  </div>
-                </div>
-                <p>IT as Job</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 70%;">
-                    ~70%
-                  </div>
-                </div>
-                <p>Web Security</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    ~30%
-                  </div>
-                </div>
+                <p>01. Initializing MELHARFI engine</p>
+                <p>02. Superposition and ZIndex</p>
+                <p>03. Drawing classes</p>
+                <p>04. Bmp (Bitmap)</p>
+                <p>05. Rec (Rectangle)</p>
+                <p>06. Anim (Animation)</p>
+                <p>07. Txt (Text)</p>
+                <p>08. FillPolygon (shapes)</p>
+                <p>09. Error handling</p>
+                <p>10. Mouse events</p>
+                <p>11. Controls and ControlLayer</p>
+                <p>12. Remove, Clean, FixedObjectLayer</p>
+                <p>13. Cryptography</p>
+                <p>14. Show, Hide</p>
+                <p>15. Interface Igfx</p>
+                <p>16. Tag</p>
+                <p>17. Child</p>
+                <p>18. SpriteSheet</p>
+                <p>19. Converting color</p>
+                <p>20. AStar pathfinding</p>
+                <p>21. LidgrenNetwork</p>
+                <p>22. Drawing Surface</p>
+                <p>23. Flickering issue</p>
+
               </div>
               <!----End Points of interest---->
             </div>
