--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -183,7 +183,7 @@
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p>Description</p>
+                <p><b>>>Description</b></p>
                 <p>01. Initializing MELHARFI engine</p>
                 <p>02. Superposition and ZIndex</p>
                 <p>03. Drawing classes</p>
