--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -175,6 +175,8 @@
                       <a href="https://www.youtube.com/watch?v=ufQObcknmVY">Youtube video 2</a><br>
                       <a href="https://www.youtube.com/watch?v=BCrMBdIy9xk">Youtube video 3</a><br>
                     </p>
+                    <button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html'">Next Chapter 01. Initializing MELHARFI engine>></button>
+                    <p></p>
                   </div>
                   
                   
@@ -207,9 +209,8 @@
                 <p>21. LidgrenNetwork</p>
                 <p>22. Drawing Surface</p>
                 <p>23. Flickering issue</p>
-
               </div>
-              <!----End Points of interest---->
+              <!----End Summary---->
             </div>
           </div>
         </section>
