--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -186,8 +186,8 @@
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
                 <p><b>>>Description</b></p>
-                <p>01. Initializing MELHARFI engine</p>
-                <p>02. Superposition and ZIndex</p>
+                <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
                 <p>03. Drawing classes</p>
                 <p>04. Bmp (Bitmap)</p>
                 <p>05. Rec (Rectangle)</p>
