--- a/test.html
+++ b/test.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-  <pre><code class="csharp">
+  <pre>
+    <code class="csharp">
 using System;
 using System.IO;
 using System.Security.Cryptography;
