--- a/melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html
+++ b/melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html
@@ -87,9 +87,9 @@
                   <div class="repos-content-sub">
                     <p><a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a></p>
 
-                    <p><b><li>Initializing MELHARFI engine</li></b></p>
+                    <p><b><h3>Initializing MELHARFI engine</h3></b></p>
                     <p>Welcome to the MELHARFI 2D Game Engine wiki!</p>
-                    <p></p>Hi guys in this tutorial we are going step by step to discover all features of that engine.</p>
+                    <p>Hi guys in this tutorial we are going step by step to discover all features of that engine.</p>
                     <p>I will make sure to explain in details all posibilities of what we can do, and for that i will use Visual Studio with C# language but you can use VB.Net as well since it work under .NET Framwork 4.0 or higher.</p>
                   
                     <p><b><li>Pre Requirement</li></b></p>
@@ -225,8 +225,8 @@ manager.refreshTimer.Interval = Fps;
                 <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
                 <p><b>>>01. Initializing MELHARFI engine</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
-                <p>03. Drawing classes</p>
-                <p>04. Bmp (Bitmap)</p>
+                <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-Bmp.html">04. Bmp (Bitmap)</a></p>
                 <p>05. Rec (Rectangle)</p>
                 <p>06. Anim (Animation)</p>
                 <p>07. Txt (Text)</p>
