--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -84,7 +84,7 @@
                     <a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
                   </div>
                   <div class="repos-content-sub">
-                    <p><b>Description</b></p>
+                    <p><b><h3>Description</h3></b></p>
                     MELHARFI is a standalone DLL to create 2D games easily or add an animated graphics to your application.<br>
                     Don't worry about many details in the usual way or adding a complex third party application, only to make some graphics in your form.<br>
                     It's commonly useful for beginners and for advanced people, as I’ll show you my own game that I build with it (at the end of that topic).<br>
@@ -188,8 +188,8 @@
                 <p><b>>>Description</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
-                <p>03. Drawing classes</p>
-                <p>04. Bmp (Bitmap)</p>
+                <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-Bmp.html">04. Bmp (Bitmap)</a></p>
                 <p>05. Rec (Rectangle)</p>
                 <p>06. Anim (Animation)</p>
                 <p>07. Txt (Text)</p>
