--- a/melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html
+++ b/melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html
@@ -150,7 +150,7 @@ cloud.Zindex = building.Zndex - 1;
                 <p><b>>>02. Superposition and ZIndex</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p>05. Rec (Rectangle)</p>
+                <p><a href="melharfi-2d-game-engine-wiki-drawing-rec.html">05. Rec (Rectangle)</a></p>
                 <p>06. Anim (Animation)</p>
                 <p>07. Txt (Text)</p>
                 <p>08. FillPolygon (shapes)</p>
