--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -189,11 +189,11 @@
                 <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p>05. Rec (Rectangle)</p>
-                <p>06. Anim (Animation)</p>
-                <p>07. Txt (Text)</p>
-                <p>08. FillPolygon (shapes)</p>
+                <p><b>>>04. Bmp (Bitmap)</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-anim.html">05. Rec (Rectangle)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-anim.html">06. Anim (Animation)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html"></a>08. FillPolygon (shapes)</p>
                 <p>09. Error handling</p>
                 <p>10. Mouse events</p>
                 <p>11. Controls and ControlLayer</p>
