add txt and polygon pages

--- a/melharfi-2d-game-engine-wiki-anim.html
+++ b/melharfi-2d-game-engine-wiki-anim.html
@@ -281,8 +281,8 @@ anim1.Reverse = true;
                 <p><a href="melharfi-2d-game-engine-wiki-rec.html">05. Rec (Rectangle)</a></p>
                 <p><b>>>06. Anim (Animation)</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html"></a>08. FillPolygon (shapes)</p>
-                <p>09. Error handling</p>
+                <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html">08. FillPolygon (shapes)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-errorhandling.html">09. Error handling</a></p>
                 <p>10. Mouse events</p>
                 <p>11. Controls and ControlLayer</p>
                 <p>12. Remove, Clean, FixedObjectLayer</p>
