--- a/melharfi-2d-game-engine-wiki-anim.html
+++ b/melharfi-2d-game-engine-wiki-anim.html
@@ -283,7 +283,7 @@ anim1.Reverse = true;
                 <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html">08. FillPolygon (shapes)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-errorhandling.html">09. Error handling</a></p>
-                <p>10. Mouse events</p>
+                <p><a href="melharfi-2d-game-engine-wiki-mouseevent.html">10. Mouse event</a></p>
                 <p>11. Controls and ControlLayer</p>
                 <p>12. Remove, Clean, FixedObjectLayer</p>
                 <p>13. Cryptography</p>
