--- a/melharfi-2d-game-engine-wiki-errorhandling.html
+++ b/melharfi-2d-game-engine-wiki-errorhandling.html
@@ -86,28 +86,44 @@
                   </div>
                   <div class="repos-content-sub">
                     <p><a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a></p>
-
-                    <p><b>Bitmap</b> , it show a picture in different format, like Bmp, Jpg, Pnj ...</p>
-                    <p><b>Rectanles</b>, drawing a square box colored or not.</p>
-                    <p><b>Animation</b>, showing a successive pictures.</p>
-                    <p><b>Text</b>, drawing text with font and color ...</p>
-                    <p><b>FillPolygon</b>, to draw shapes as a polygon</p>
-                    <p>Preference Visual studio 2017 or above, i am using 2019  frensh version for this tutorial.</p>
-                    <p>These classes will be explained in next chapters</p>
-                    <p>Remember that you have to add this line :</p>
-                    
+                    <p><b><h3>09. Error handling</h3></b></p>
+                    <p><b>Error Handling</b></p>
+                    <p>There's a code inside game loop "try catch" to prevent it from crash and then quite.</p>
+                    <p>To avoid crashing you can subscribe to an event handler withing a callback.</p>
                     <p>
-                    <pre>
-                      <code class="csharp">
-using static MELHARFI.Manager;
-                      </code>
-                    </pre>
-                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-bmp.html'">Next Chapter 04. Bmp>></button></p>
+                      <pre>
+                        <code class="csharp">
+using System;
+using System.Drawing;
+using System.Windows.Forms;
+using MELHARFI.Manager;
+using MELHARFI.Manager.Gfx;
 
+namespace _2dProject
+{
+    public partial class Form1 : Form
+    {
+        public Form1()
+        {
+            InitializeComponent();
 
+            Manager manager = new Manager(this, "CORE_ENGINE");
+            manager.Background = Color.Blue;
+            manager.OutputErrorCallBack = CatchError;
+
+        }
+
+        private void CatchError(string error)
+        {
+            // show notification for your error here or ignore it.
+        }
+    }
+}
+                        </code>
+                      </pre>
+                    </p>
+                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-mouse-event.html'">Next Chapter 08. FillPolygon>></button></p>
                   </div>
-
-
                 </div>
               </div>
               <!----Summary---->
@@ -116,11 +132,11 @@ using static MELHARFI.Manager;
                 <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
-                <p><b>>>03. Drawing classes</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-rec.html">05. Rec (Rectangle)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-anim.html">06. Anim (Animation)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
+                <p><b>>>07. Txt (Text)</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html">08. FillPolygon (shapes)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-errorhandling.html">09. Error handling</a></p>
                 <p>10. Mouse events</p>
