--- a/melharfi-2d-game-engine-wiki-errorhandling.html
+++ b/melharfi-2d-game-engine-wiki-errorhandling.html
@@ -136,9 +136,9 @@ namespace _2dProject
                 <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-rec.html">05. Rec (Rectangle)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-anim.html">06. Anim (Animation)</a></p>
-                <p><b>>>07. Txt (Text)</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html">08. FillPolygon (shapes)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-errorhandling.html">09. Error handling</a></p>
+                <p><b>>>09. Error handling</b></a></p>
                 <p>10. Mouse events</p>
                 <p>11. Controls and ControlLayer</p>
                 <p>12. Remove, Clean, FixedObjectLayer</p>
