--- a/melharfi-2d-game-engine-wiki-05-rec.html
+++ b/melharfi-2d-game-engine-wiki-05-rec.html
@@ -86,45 +86,41 @@
                   </div>
                   <div class="repos-content-sub">
                     <p><a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a></p>
-                    <p><b><h3>07. Txt (Text)</h3></b></p>
-                    <p><b>Txt class</b></p>
-                    <p>This class draw a text on screen.</p>
-                    <p>There's 3 overload of the constructors</p>
-                    <p><li>An empty one if you want to initialize later</li></p>
+                    <p><b><h3>05. Rec (Rectangle)</h3></b></p>
+                    <p><b>Rec class</b></p>
+                    <p>Sometime you just need to draw a rectangle filled with a color inside, it's pretty useful to show a message, or for any reason and believe me you'll need it a lot of time.</p>
+                    <p>Let's take a look to the constructors.</p>
+                    <p>There’s 2 overloads, an empty one, and another one with 6 parameters (Brush, Point, Size, Name, TypeGfx, Visible)</p>
+                    <p><b>Brush </b> is the color of the rectangle</p>
+                    <p><b>Point</b></p>
+                    <p><b>Size</b></p>
+                    <p><b>Name</b></p>
+                    <p><b>TypeGfx</b></p>
+                    <p><b>Visible </b> : to identify object as it's type if is it a background or Object or Top</p>
                     <p>
                       <pre>
                         <code class="csharp">
-Txt label1 = new Txt(manager);
-manager.ObjectLayer.Add(box1);
+Rec box1 = new Rec(Brushes.Red, new Point(100, 100), new Size(80, 80), "box1", Manager.TypeGfx.Background, true, manager);
+manager.BackgroundLayer.Add(box1);
                         </code>
                       </pre>
                     </p>
-                      
-                    <p><li>Second overload</li>></p>
+
+                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/ch6-rec1.PNG"></p>
+                    <p>You can add a border of the rectangle.</p>
                     <p>
                       <pre>
                         <code class="csharp">
-Txt label1 = new Txt(text, p, manager);
-manager.ObjectLayer.Add(box1);
+Rec box1 = new Rec(Brushes.Red, new Point(100, 100), new Size(80, 80), "box1", Manager.TypeGfx.Background, true, manager);
+box1.BorderColor = Color.Black;
+box1.BorderWidth = 2;
+manager.BackgroundLayer.Add(box1);
                         </code>
                       </pre>
                     </p>
-                    <p><b>text</b> is the text to draw</p>
-                    <p><b>p</b> is the position of the text on screen.</p>
-                    <p><li>3rd overload with font parameter and the complete one</li></p>
-                    <p>
-                      <pre>
-                        <code class="csharp">
-Manager manager = new Manager(this, "CORE_ENGINE");
-manager.Background = Color.Blue;
-              
-Txt label1 = new Txt("Hello World", new Point(10, 20), "helloWorldStr", Manager.TypeGfx.Object, true, new Font("Verdana", 39, FontStyle.Bold), Brushes.Chocolate, manager);
-manager.ObjectLayer.Add(label1);
-                        </code>
-                      </pre>
-                    </p>
-                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/ch-txt-helloWorld.PNG"></p>
-                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-fillpolygon.html'">Next Chapter 08. FillPolygon>></button></p>
+                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/ch6-rec2.PNG"></p>
+
+                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-06-anim.html'">Next Chapter 06. Anim>></button></p>
 
                   </div>
                 </div>
@@ -132,17 +128,17 @@ manager.ObjectLayer.Add(label1);
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-rec.html">05. Rec (Rectangle)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-anim.html">06. Anim (Animation)</a></p>
-                <p><b>>>07. Txt (Text)</b></p>
-                <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html">08. FillPolygon (shapes)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-errorhandling.html">09. Error handling</a></p>
-                <p>10. Mouse events</p>
+                <p><b>>>Home</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-01-initializing.html">01. Initializing MELHARFI engine</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-04-bmp.html">04. Bmp (Bitmap)</a></p>
+                <p><b>>>05. Rec (Rectangle)</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-06-anim.html">06. Anim (Animation)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-07-txt.html">07. Txt (Text)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
                 <p>11. Controls and ControlLayer</p>
                 <p>12. Remove, Clean, FixedObjectLayer</p>
                 <p>13. Cryptography</p>
