--- a/melharfi-2d-game-engine-wiki-07-txt.html
+++ b/melharfi-2d-game-engine-wiki-07-txt.html
@@ -86,60 +86,63 @@
                   </div>
                   <div class="repos-content-sub">
                     <p><a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a></p>
-                    <p><b><h3>09. Error handling</h3></b></p>
-                    <p><b>Error Handling</b></p>
-                    <p>There's a code inside game loop "try catch" to prevent it from crash and then quite.</p>
-                    <p>To avoid crashing you can subscribe to an event handler withing a callback.</p>
+                    <p><b><h3>07. Txt (Text)</h3></b></p>
+                    <p><b>Txt class</b></p>
+                    <p>This class draw a text on screen.</p>
+                    <p>There's 3 overload of the constructors</p>
+                    <p><li>An empty one if you want to initialize later</li></p>
                     <p>
                       <pre>
                         <code class="csharp">
-using System;
-using System.Drawing;
-using System.Windows.Forms;
-using MELHARFI.Manager;
-using MELHARFI.Manager.Gfx;
-
-namespace _2dProject
-{
-    public partial class Form1 : Form
-    {
-        public Form1()
-        {
-            InitializeComponent();
-
-            Manager manager = new Manager(this, "CORE_ENGINE");
-            manager.Background = Color.Blue;
-            manager.OutputErrorCallBack = CatchError;
-
-        }
-
-        private void CatchError(string error)
-        {
-            // show notification for your error here or ignore it.
-        }
-    }
-}
+Txt label1 = new Txt(manager);
+manager.ObjectLayer.Add(box1);
                         </code>
                       </pre>
                     </p>
-                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-mouse-event.html'">Next Chapter 08. FillPolygon>></button></p>
+                      
+                    <p><li>Second overload</li>></p>
+                    <p>
+                      <pre>
+                        <code class="csharp">
+Txt label1 = new Txt(text, p, manager);
+manager.ObjectLayer.Add(box1);
+                        </code>
+                      </pre>
+                    </p>
+                    <p><b>text</b> is the text to draw</p>
+                    <p><b>p</b> is the position of the text on screen.</p>
+                    <p><li>3rd overload with font parameter and the complete one</li></p>
+                    <p>
+                      <pre>
+                        <code class="csharp">
+Manager manager = new Manager(this, "CORE_ENGINE");
+manager.Background = Color.Blue;
+              
+Txt label1 = new Txt("Hello World", new Point(10, 20), "helloWorldStr", Manager.TypeGfx.Object, true, new Font("Verdana", 39, FontStyle.Bold), Brushes.Chocolate, manager);
+manager.ObjectLayer.Add(label1);
+                        </code>
+                      </pre>
+                    </p>
+                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/ch-txt-helloWorld.PNG"></p>
+                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-08-fillpolygon.html'">Next Chapter 08. FillPolygon>></button></p>
+
                   </div>
                 </div>
               </div>
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-rec.html">05. Rec (Rectangle)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-anim.html">06. Anim (Animation)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-fillpolygon.html">08. FillPolygon (shapes)</a></p>
-                <p><b>>>09. Error handling</b></a></p>
-                <p>10. Mouse events</p>
+                <p><b>>>Home</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-01-initializing.html">01. Initializing MELHARFI engine</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-04-bmp.html">04. Bmp (Bitmap)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-05-anim.html">05. Rec (Rectangle)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-06-anim.html">06. Anim (Animation)</a></p>
+                <p><b>>>07. Txt (Text)</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
                 <p>11. Controls and ControlLayer</p>
                 <p>12. Remove, Clean, FixedObjectLayer</p>
                 <p>13. Cryptography</p>
