--- a/melharfi-2d-game-engine-wiki-08-fillpolygon.html
+++ b/melharfi-2d-game-engine-wiki-08-fillpolygon.html
@@ -146,7 +146,7 @@ FillPolygon fp = new FillPolygon(Brushes.Green, points, Manager.TypeGfx.Object, 
                       </pre>
                     </p>
                     <p><img src="repos/MELHARFI-2D-Game-Engine/assets/fillpolygonB.PNG"></p>
-                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-errorhandling.html'">Next Chapter 09. Error Handling>></button></p>
+                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-09-error.html'">Next Chapter 09. Error Handling>></button></p>
 
                   </div>
                 </div>
@@ -154,17 +154,17 @@ FillPolygon fp = new FillPolygon(Brushes.Green, points, Manager.TypeGfx.Object, 
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-Initializing-MELHARFI-engine.html">01. Initializing MELHARFI engine</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-Superposition-and-ZIndex.html">02. Superposition and ZIndex</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-drawing-classes.html">03. Drawing classes</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-rec.html">05. Rec (Rectangle)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-anim.html">06. Anim (Animation)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-txt.html">07. Txt (Text)</a></p>
+                <p><b>>>Home</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-01-initializing.html">01. Initializing MELHARFI engine</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-04-bmp.html">04. Bmp (Bitmap)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-05-anim.html">05. Rec (Rectangle)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-06-anim.html">06. Anim (Animation)</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-07-txt.html">07. Txt (Text)</a></p>
                 <p><b>>>08. FillPolygon (shapes)</b></p>
-                <p><a href="melharfi-2d-game-engine-wiki-errorhandling.html">09. Error handling</a></p>
-                <p>10. Mouse events</p>
+                <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
                 <p>11. Controls and ControlLayer</p>
                 <p>12. Remove, Clean, FixedObjectLayer</p>
                 <p>13. Cryptography</p>
