--- a/melharfi-2d-game-engine-wiki-10-mouse-events.html
+++ b/melharfi-2d-game-engine-wiki-10-mouse-events.html
@@ -97,19 +97,9 @@
                     <p><li><b>MouseOver</b></li></p>
                     <p><li><b>MouseMove</b></li></p>
                     <p><li><b>MouseOut</b></li></p>
-                    <p>To bind an object to an event just follow your object name by <b>"".MouseClic"</b> followed by Tab button, that allow you to generate a method automatically.</p>
+                    <p>To bind an object to an event just follow your object name by <b>"".MouseClic +="</b> and then intellisense ask you if you want to auto generate a method using the "Tab" button.</p>
                     <p><img src="repos/MELHARFI-2D-Game-Engine/assets/eventMouseClic.png"></p>
                     <p><img src="repos/MELHARFI-2D-Game-Engine/assets/cloudClick.png"></p>
-                    <p>
-                      <pre>
-                        <code class="csharp">
-Txt label1 = new Txt(manager);
-manager.ObjectLayer.Add(box1);
-                        </code>
-                      </pre>
-                    </p>
-                      
-                    <p><li>Second overload</li>></p>
                     <p>
                       <pre>
                         <code class="csharp">
@@ -164,11 +154,11 @@ namespace _2dProject
                 <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
                 <p><b>>>10. Mouse events</b></p>
-                <p>11. Controls and ControlLayer</p>
-                <p>12. Remove, Clean, FixedObjectLayer</p>
-                <p>13. Cryptography</p>
-                <p>14. Show, Hide</p>
-                <p>15. Interface Igfx</p>
+                <p><a href="melharfi-2d-game-engine-wiki-10-controls.html">11. Controls and ControlLayer</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove, Clear and FixedObjectLayer</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
                 <p>16. Tag</p>
                 <p>17. Child</p>
                 <p>18. SpriteSheet</p>
