--- a/melharfi-2d-game-engine-wiki-07-txt.html
+++ b/melharfi-2d-game-engine-wiki-07-txt.html
@@ -143,11 +143,11 @@ manager.ObjectLayer.Add(label1);
                 <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
-                <p>11. Controls and ControlLayer</p>
-                <p>12. Remove, Clean, FixedObjectLayer</p>
-                <p>13. Cryptography</p>
-                <p>14. Show, Hide</p>
-                <p>15. Interface Igfx</p>
+                <p><a href="melharfi-2d-game-engine-wiki-10-controls.html">11. Controls and ControlLayer</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove, Clear and FixedObjectLayer</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
                 <p>16. Tag</p>
                 <p>17. Child</p>
                 <p>18. SpriteSheet</p>
